--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Login into Github Docker Registery
-      run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u shyim --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
     - name: Build the Docker image
       run: docker build -t ghcr.io/shyim/qodana-php .
