--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
         push: true
         tags: ghcr.io/shyim/qodana-php
         cache-from: type=gha,mode=max
-        cache-to: type=tha,mode=max
+        cache-to: type=gha,mode=max
