--- a/Dockerfile.8.2
+++ b/Dockerfile.8.2
@@ -16,7 +16,7 @@ COPY --from=qodana-php /opt/idea /opt/idea
 
 RUN apt-get update && \
     apt-get install -y curl && \
-    curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash - && \
+    curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
     curl https://packages.sury.org/php/README.txt | bash && \
     apt-get install -y nodejs php8.2-cli php8.2-mysql php8.2-curl php8.2-gd php8.2-xml php8.2-zip php8.2-opcache php8.2-mbstring php8.2-intl php8.2-imap php8.2-pgsql php8.2-soap && \
     rm -rf /var/cache/apt /var/lib/apt/ /tmp/* && \
