--- a/Dockerfile.8.2
+++ b/Dockerfile.8.2
@@ -18,7 +18,7 @@ RUN apt-get update && \
     apt-get install -y curl && \
     curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
     curl https://packages.sury.org/php/README.txt | bash && \
-    apt-get install -y nodejs php8.2-cli php8.2-mysql php8.2-curl php8.2-gd php8.2-xml php8.2-zip php8.2-opcache php8.2-mbstring php8.2-intl php8.2-imap php8.2-pgsql php8.2-soap && \
+    apt-get install -y nodejs php8.2-cli php8.2-mysql php8.2-curl php8.2-gd php8.2-xml php8.2-zip php8.2-opcache php8.2-mbstring php8.2-intl php8.2-imap php8.2-pgsql php8.2-soap php8.2-bcmath && \
     rm -rf /var/cache/apt /var/lib/apt/ /tmp/* && \
     update-alternatives --install /usr/bin/java java $JAVA_HOME/bin/java 0 && \
     update-alternatives --install /usr/bin/javac javac $JAVA_HOME/bin/javac 0 && \
